--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "install-peers": "^1.0.3",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.2.2",
+    "react-scripts": "^5.0.0",
     "styled-components": "^5.3.3"
   },
   "devDependencies": {},
